--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -182,40 +182,45 @@ proxy-groups: # 策略组
 
 rule-providers: # 远程规则集
 
-  Unbreak: # > 规则修正
+  Unbreak: # 规则修正
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml"
     path: ./ruleset/Unbreak.yaml
 
-  Advertising: # > 广告拦截
+  Advertising: # 广告拦截
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Stash/RuleSet/Advertising.yaml"
     path: ./ruleset/Advertising.yaml
 
-  OpenAI: # > OpenAI
+  OpenAI: # OpenAI
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Stash/RuleSet/OpenAI.yaml"
     path: ./ruleset/OpenAI.yaml
 
-  YouTube: # > 油管视频
+  YouTube: # 油管视频
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml"
     path: ./ruleset/YouTube.yaml
 
-  Netflix: # > 奈飞视频
+  Netflix: # 奈飞视频
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml"
     path: ./ruleset/Netflix.yaml
 
-  Disney: # > 迪士尼+
+  Disney: # 迪士尼+
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.yaml"
     path: ./ruleset/Disney.yaml
 
-  Emby: # > Emby
+  Emby: # Emby
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml"
     path: ./ruleset/Emby.yaml
+
+  Bahamut: # 动画疯
+    <<: *c
+    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml"
+    path: ./ruleset/Bahamut.yaml
 
   BiliIntl: # 哔哩哔哩东南亚
     <<: *c
@@ -310,6 +315,7 @@ rules: # 分流规则引用
   - RULE-SET,Netflix,NETFLIX
   - RULE-SET,Disney,Disney+
   - RULE-SET,Emby,Emby
+  - RULE-SET,Bahamut,TaiWan
   - RULE-SET,BiliIntl,Streaming
   - RULE-SET,BiliBili,BiliBili
   - RULE-SET,Spotify,Spotify
