--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.04
+# > Update Date: 2023.05.09
 
 ############################################################################
 # > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -92,7 +92,7 @@ use-local-host-item-for-proxy = false
 udp-policy-not-supported-behaviour = REJECT
 
 # > 提高处理 UDP 流量优先级
-# udp-priority = true
+udp-priority = true
 
 # > 切换网络后不再重新进行 VPN 配置
 fast-switch = true
@@ -240,7 +240,7 @@ DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 
 # > Local Area Network 局域网指定分流
-RULE-SET,LAN,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
 
 # > GeoIP China
 GEOIP,CN,DIRECT
