--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.09
+# > Update Date: 2023.05.14
 
 ############################################################################
 # > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -164,7 +164,7 @@ Google = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, Amer
 # > 微软服务
 Microsoft = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 游戏平台
-Games = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Games = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 广告拦截
 AdBlock = select, REJECT, DIRECT, no-alert=0, hidden=0
 # > 香港节点
@@ -230,11 +230,13 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # > 游戏平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
-# > 国内网站
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Mainland
-
 # > 国外网站
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
+
+# > 国内网站
+RULE-SET,https://raw.githubusercontent.com/Blankwonder/surge-list/master/cn.list,Mainland
+# > 国内网站
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China_Domain.list,Mainland
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
