Update and rename Surge-Evolve.conf to ev01ve.conf

--- a/Surge/Config/ev01ve.conf
+++ b/Surge/Config/ev01ve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.14
+# > Update Date: 2023.05.15
 
 ############################################################################
 # > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -230,6 +230,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # > 游戏平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
+# > 国外网站
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
 # > 国外网站
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
 
