更新策略组

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -178,7 +178,7 @@ Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600, 
 # > 美国节点
 America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 其他节点
-Others = select, DIRECT, policy-regex-filter=.*, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 
 [Rule]
 # > 规则修正
