--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,7 +1,7 @@
 # Clash/Premium/Meta/Stash Config Make by Coldvvater
 # TG Channel: https://t.me/Ison_Channel
 # GitHub主页: https://github.com/Coldvvater
-# Update Date: 2023.05.16
+# Update Date: 2023.05.17
 
 # > 自选GEOIP库推荐使用: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
 
@@ -178,6 +178,9 @@ proxy-groups: # 策略组
 
 rule-providers: # 远程规则集
 
+# 隐私网络
+ Private: {<<: *d, path: ./ruleset/Private.yaml, url: https://rules.kr328.app/private.yaml}
+
 # OpenAI
  OpenAI: {<<: *d, path: ./ruleset/OpenAI.yaml, url: https://rules.kr328.app/openai.yaml}
 
@@ -191,7 +194,7 @@ rule-providers: # 远程规则集
  Disney: {<<: *d, path: ./ruleset/Disney.yaml, url: https://rules.kr328.app/disney.yaml}
 
 # Emby
- Emby: {<<: *c, path: ./ruleset/Emby.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml}
+ Emby: {<<: *c, path: ./ruleset/Emby.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Emby/Emby.yaml}
 
 # 动画疯
  Bahamut: {<<: *d, path: ./ruleset/Bahamut.yaml, url: https://rules.kr328.app/bahamut.yaml}
@@ -200,22 +203,22 @@ rule-providers: # 远程规则集
  BiliIntl: {<<: *d, path: ./ruleset/BiliIntl.yaml, url: https://rules.kr328.app/bilibili@%21cn.yaml}
 
 # 哔哩哔哩
- BiliBili: {<<: *c, path: ./ruleset/BiliBili.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml}
+ BiliBili: {<<: *c, path: ./ruleset/BiliBili.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml}
 
 # 声田音乐
  Spotify: {<<: *d, path: ./ruleset/Spotify.yaml, url: https://rules.kr328.app/spotify.yaml}
 
 # 网易云音乐
- NetEaseMusic: {<<: *c, path: ./ruleset/NetEaseMusic.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml}
+ NetEaseMusic: {<<: *c, path: ./ruleset/NetEaseMusic.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml}
 
 # 海外抖音
  TikTok: {<<: *d, path: ./ruleset/TikTok.yaml, url: https://rules.kr328.app/tiktok.yaml}
 
 # 国际媒体
- GlobalMedia_Domain: {<<: *d, path: ./ruleset/GlobalMedia_Domain.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml}
+ GlobalMedia_Domain: {<<: *d, path: ./ruleset/GlobalMedia_Domain.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml}
 
 # 电报信息
- Telegram: {<<: *c, path: ./ruleset/Telegram.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml}
+ Telegram: {<<: *d, path: ./ruleset/Telegram.yaml, url: https://rules.kr328.app/telegram.yaml}
 
 # GitHub
  GitHub: {<<: *d, path: ./ruleset/GitHub.yaml, url: https://rules.kr328.app/github.yaml}
@@ -227,7 +230,7 @@ rule-providers: # 远程规则集
  Twitter: {<<: *d, path: ./ruleset/Twitter.yaml, url: https://rules.kr328.app/twitter.yaml}
 
 # TestFlight
- TestFlight: {<<: *c, path: ./ruleset/TestFlight.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TestFlight/TestFlight.yaml}
+ TestFlight: {<<: *c, path: ./ruleset/TestFlight.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TestFlight/TestFlight.yaml}
 
 # 苹果服务
  Apple: {<<: *d, path: ./ruleset/Apple.yaml, url: https://rules.kr328.app/apple.yaml}
@@ -239,18 +242,16 @@ rule-providers: # 远程规则集
  Microsoft: {<<: *d, path: ./ruleset/Microsoft.yaml, url: https://rules.kr328.app/microsoft.yaml}
 
 # 游戏平台
- Games: {<<: *c, path: ./ruleset/Games.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml}
+ Games: {<<: *c, path: ./ruleset/Games.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml}
 
 # 国内网站
- China_Domain: {<<: *d, path: ./ruleset/China_Domain.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Domain.yaml}
+ China_Domain: {<<: *d, path: ./ruleset/China_Domain.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml}
 
 # 国外网站
- Global_Domain: {<<: *d, path: ./ruleset/Global_Domain.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml}
-
-# 局域网
- Lan: {<<: *c, path: ./ruleset/Lan.yaml, url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml}
+ Global_Domain: {<<: *d, path: ./ruleset/Global_Domain.yaml, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Domain.yaml}
 
 rules: # 分流规则引用
+  - RULE-SET,Private,DIRECT
   - RULE-SET,OpenAI,America
   - RULE-SET,YouTube,YouTube
   - RULE-SET,Netflix,NETFLIX
@@ -263,7 +264,7 @@ rules: # 分流规则引用
   - RULE-SET,NetEaseMusic,NetEaseMusic,no-resolve
   - RULE-SET,TikTok,TikTok
   - RULE-SET,GlobalMedia_Domain,Streaming
-  - RULE-SET,Telegram,Telegram,no-resolve
+  - RULE-SET,Telegram,Telegram
   - RULE-SET,GitHub,Global
   - RULE-SET,Bing,Global
   - RULE-SET,Twitter,Global
@@ -273,7 +274,10 @@ rules: # 分流规则引用
   - RULE-SET,Microsoft,Microsoft
   - RULE-SET,Games,Games,no-resolve
   - RULE-SET,Global_Domain,Global
+  - GEOIP,google,Google
+  - GEOIP,telegram,Telegram
+  - GEOIP,netflix,NETFLIX
   - RULE-SET,China_Domain,Mainland
-  - RULE-SET,Lan,DIRECT
+  - GEOIP,private,DIRECT
   - GEOIP,CN,Mainland
   - MATCH,Final
