--- a/Stash/Clash/Config/Evolve.ini
+++ b/Stash/Clash/Config/Evolve.ini
@@ -1,28 +1,32 @@
 [custom]
+ruleset=DIRECT,https://rules.kr328.app/private.yaml
 ruleset=America,https://rules.kr328.app/openai.yaml
 ruleset=YouTube,https://rules.kr328.app/youtube.yaml
 ruleset=NETFLIX,https://rules.kr328.app/netflix.yaml
 ruleset=Disney+,https://rules.kr328.app/disney.yaml
-ruleset=Emby,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Emby/Emby.yaml
+ruleset=Emby,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Emby/Emby.yaml
 ruleset=TaiWan,https://rules.kr328.app/bahamut.yaml
 ruleset=Streaming,https://rules.kr328.app/bilibili@%21cn.yaml
-ruleset=BiliBili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
+ruleset=BiliBili,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml
 ruleset=Spotify,https://rules.kr328.app/spotify.yaml
-ruleset=NetEaseMusic,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
+ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
 ruleset=TikTok,https://rules.kr328.app/tiktok.yaml
-ruleset=Streaming,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml
-ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
+ruleset=Streaming,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml
+ruleset=Telegram,https://rules.kr328.app/telegram.yaml
 ruleset=Global,https://rules.kr328.app/github.yaml
 ruleset=Global,https://rules.kr328.app/bing.yaml
 ruleset=Global,https://rules.kr328.app/twitter.yaml
-ruleset=Global,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TestFlight/TestFlight.yaml
+ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TestFlight/TestFlight.yaml
 ruleset=Apple,https://rules.kr328.app/apple.yaml
 ruleset=Google,https://rules.kr328.app/google.yaml
 ruleset=Microsoft,https://rules.kr328.app/microsoft.yaml
-ruleset=Games,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml
-ruleset=Global,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml
-ruleset=Mainland,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Domain.yaml
-ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml
+ruleset=Games,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml
+ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Domain.yaml
+ruleset=Google,[]GEOIP,google
+ruleset=Telegram,[]GEOIP,telegram
+ruleset=NETFLIX,[]GEOIP,netflix
+ruleset=Mainland,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
+ruleset=DIRECT,[]GEOIP,private
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Final,[]FINAL
 ;设置规则标志位
