--- a/Stash/Clash/Config/Evolve.ini
+++ b/Stash/Clash/Config/Evolve.ini
@@ -26,7 +26,7 @@ ruleset=Google,[]GEOIP,google
 ruleset=Telegram,[]GEOIP,telegram
 ruleset=NETFLIX,[]GEOIP,netflix
 ruleset=Mainland,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
-ruleset=DIRECT,[]GEOIP,private
+ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Final,[]FINAL
 ;设置规则标志位
