--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,7 +1,7 @@
 # Clash/Premium/Meta/Stash Config Make by Coldvvater
 # TG Channel: https://t.me/Ison_Channel
 # GitHub主页: https://github.com/Coldvvater
-# Update Date: 2023.05.19
+# Update Date: 2023.05.25
 
 # 自选GEOIP库推荐使用: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
 
@@ -30,28 +30,25 @@ dns:
 
   fake-ip-range: 198.18.0.1/16  # Fake-IP 解析地址池
   fake-ip-filter:               # Fake-ip 过滤，列表中的域名返回真实IP
-
-    - '+.lan'                   # Local Area Network
- 
-    - '+.stun.*.*'              # Stun Services
-    - '+.stun.*.*.*'
-    - '+.stun.*.*.*.*'
-    - '+.stun.*.*.*.*.*'
-
-    - 'lens.l.google.com'        # Google Voices
-
-    - '*.n.n.srv.nintendo.net'   # Nintendo Switch
-
-    - '+.stun.playstation.net'   # PlayStation
-
-    - 'xbox.*.*.microsoft.com'   # XBox
-    - '*.*.xboxlive.com'         
-
-    - '*.msftncsi.com'           # Microsoft
+    - '+.lan'
+    - localhost.ptlogin2.qq.com
+    - '*.battle.net'
+    - '*.blzstatic.cn'
+    - '*.battlenet.com'
+    - '*.battlenet.com.cn'
+    - 'lens.l.google.com'
+    - '+.srv.nintendo.net'
+    - '+.stun.playstation.net'
+    - '+.msftncsi.com'
+    - '+.xboxlive.com'
+    - 'msftconnecttest.com'
+    - 'xbox.*.*.microsoft.com'
+    - 'xbox.*.microsoft.com'         
+    - '+.msftconnecttest.com'
+    - '*.msftncsi.com'
     - '*.msftconnecttest.com'
+    - '*.mcdn.bilivideo.cn'
 
-    - '*.mcdn.bilivideo.cn'      # Bilibili CDN
-  
   nameserver:                    # 默认DNS服务器，支持udp/tcp/dot/doh/doq
     - https://223.5.5.5/dns-query
     - https://1.12.12.12/dns-query
@@ -64,7 +61,7 @@ c: &c {type: http, behavior: classical, interval: 86400}
 d: &d {type: http, behavior: domain, interval: 86400}
 
 # 远程订阅相关
-p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300}}
+p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://1.1.1.1, interval: 300}}
 
 # 代理组相关
 g: &g {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
