--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.22
+# > Update Date: 2023.05.25
 
 ############################################################################
 # > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -19,7 +19,7 @@ all-hybrid = false
 # > Internet 测试 URL
 internet-test-url = http://www.aliyun.com
 # > 代理测速 URL
-proxy-test-url = http://cp.cloudflare.com/generate_204
+proxy-test-url = http://1.1.1.1
 # > 测试超时（秒）
 test-timeout = 5
 
