--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -17,9 +17,9 @@ wifi-assist = false
 all-hybrid = false
 
 # > Internet 测试 URL
-internet-test-url = http://www.aliyun.com
+internet-test-url = http://www.bing.com
 # > 代理测速 URL
-proxy-test-url = http://1.1.1.1
+proxy-test-url = http://www.apple.com/library/test/success.html
 # > 测试超时（秒）
 test-timeout = 5
 
