--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -61,7 +61,7 @@ c: &c {type: http, behavior: classical, interval: 86400}
 d: &d {type: http, behavior: domain, interval: 86400}
 
 # 远程订阅相关
-p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://1.1.1.1, interval: 300}}
+p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://www.apple.com/library/test/success.html, interval: 300}}
 
 # 代理组相关
 g: &g {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
