--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,10 +1,10 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.25
+# > Update Date: 2023.05.27
 
 ############################################################################
-# > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
+# > SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
 # > 可自行修改为自己家里的WiFi名称。
 ############################################################################
 
@@ -165,8 +165,7 @@ Google = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, Amer
 Microsoft = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 游戏平台
 Games = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
-# > 广告拦截
-AdBlock = select, REJECT, DIRECT, no-alert=0, hidden=0
+
 # > 香港节点
 HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 台湾节点
