--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.27
+# > Update Date: 2023.05.29
 
 ############################################################################
 # > SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -180,7 +180,7 @@ America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, in
 Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American|Music).)*$, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 
 [Rule]
-# > 私有网络
+# > 隐私网络
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/private.txt,DIRECT
 
 # > OpenAI
