--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,7 +1,7 @@
 # Stash/Clash/(Premium/Meta) Config Make by Coldvvater
 # TG Channel: https://t.me/Ison_Channel
 # GitHub: https://github.com/Coldvvater
-# Update Date: 2023.06.02
+# Update Date: 2023.06.04
 
 # 自选GEOIP数据库推荐使用: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
 
@@ -52,18 +52,6 @@ dns:
   nameserver:                    # 默认DNS服务器，支持udp/tcp/dot/doh/doq
     - https://223.5.5.5/dns-query
     - https://1.12.12.12/dns-query
-
-# 此处为修正 Stash 因从 WiFi 切换至蜂窝网络时 DNS 无法及时更新而导致 fake-ip 失效某些网站无法打开问题
-# 请在 Stash APP 的设置页面 "网络设置" 中开启 "Fallback DNS" 以使用此功能
-  fallback: #!replace
-    - https://dns.alidns.com/dns-query
-
-  fallback-filter: 
-    geoip: false
-    geoip-code: CN
-
-    ipcidr:
-      - '198.18.0.1/16'
 
 ###锚点###
 
@@ -273,6 +261,6 @@ rules: # 分流规则引用
   - GEOIP,telegram,Telegram
   - GEOIP,netflix,NETFLIX
   - RULE-SET,China_Domain,Mainland
-  - GEOIP,LAN,DIRECT
+  - GEOIP,private,DIRECT
   - GEOIP,CN,Mainland
   - MATCH,Final
